--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
       <input type="button" id="logout" value="Logout" onclick="logout()">
     </div>
 
+  <div class=popup id=comandos>
+    <div class=title>
+      Comandos
+    </div>
+    <div class=button id=instrucoes>Instruções</div>
+
+    <div class=button id=classificacao>Classificações</div>
+  </div>
+
+  <span id=popInstrucoes>O Mancala é uma família de jogos origem africana, conhecidos como jogos de semeadura, ou de contagem e captura. 
+    São jogados em tabuleiros com concavidades contendo grãos ou contas. No início do jogo os armazéns (de lado) estão vazios e as restantes 
+    cavidades têm o mesmo número de sementes. Os jogadores semeiam as suas sementes alternadamente a partir de uma das suas cavidades. 
+    O jogador recolhe todas as sementes de uma cavidade e coloca 1 em cada cavidade no sentido anti-horário. Volta a jogar se a última 
+    semente for semeada no seu próprio armazém. Se a última semente calhar numa sua cavidade vazia, transfere para o seu armazém as 
+    sementes na cavidade oposta, do adversário, assim como essa última semente semeada. Jogo termina quando um dos jogadores não pode jogar 
+    porque todas as suas cavidades estão vazias. O outro jogador recolhe as sementes nas suas cavidades, que são colocadas no seu armazém.
+    Ganha o jogador cujo armazém tem mais sementes!</span>
+
+    <span id=popClassificacao>Classificações dos últimos jogos.</span>
+
     <div class=popup id=configuracao>
       <h2>
         Configuração
@@ -48,16 +68,6 @@
         Jogar
       </div>
     </div>
-
-  <div class=popup id=comandos>
-    <div class=title>
-      Comandos
-    </div>
-    <div class=button>Instruções</div>
-    <div class=button>Iniciar jogo</div>
-    <div class=button>Desistir</div>
-    <div class=button>Classificações</div>
-  </div>
 
   <div class=popup id=estado>
     <h2>
