--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    
     <h1>
       Mancala
     </h1>
@@ -18,23 +19,22 @@
       </h2>
       Nome de utilizador: <input type="text" name="name"> <br>
       Password: <input type="password" name="password"> <br>
-      <input type="button" value="Login" onclick="validateForm()">  
+      <input type="button" value="Login" onclick="login()">  
     </form>
 
     <div class=popup id=terminar>
       <input type="button" id="logout" value="Logout" onclick="logout()">
     </div>
 
-  <div class=popup id=comandos>
-    <div class=title>
-      Comandos
+    <div class=popup id=comandos>
+      <div class=title>
+        Comandos
+      </div>
+      <div class=button id=instrucoes>Instruções</div>
+      <div class=button id=classificacao>Classificações</div>
     </div>
-    <div class=button id=instrucoes>Instruções</div>
 
-    <div class=button id=classificacao>Classificações</div>
-  </div>
-
-  <span id=popInstrucoes>O Mancala é uma família de jogos origem africana, conhecidos como jogos de semeadura, ou de contagem e captura. 
+    <span id=popInstrucoes>O Mancala é uma família de jogos origem africana, conhecidos como jogos de semeadura, ou de contagem e captura. 
     São jogados em tabuleiros com concavidades contendo grãos ou contas. No início do jogo os armazéns (de lado) estão vazios e as restantes 
     cavidades têm o mesmo número de sementes. Os jogadores semeiam as suas sementes alternadamente a partir de uma das suas cavidades. 
     O jogador recolhe todas as sementes de uma cavidade e coloca 1 em cada cavidade no sentido anti-horário. Volta a jogar se a última 
@@ -49,14 +49,19 @@
       <h2>
         Configuração
       </h2>
-      Escolha o número de cavidades em cada lado do tabuleiro:
-      <input type=number onblur="getVal()"> <br>
-      Escolha o número inicial de sementes por cavidade:
-      <input type=number> <br>
+      Escolha o número de cavidades em cada lado (3-6):
+      <input type=number id=cavidades min="3" max="6"> <br>
+      Escolha o número inicial de sementes por cavidade (1-8):
+      <input type=number id=sementes min="1" max="8"> <br>
       Pretende jogar contra o computador ou contra outro jogador:
       <select>
         <option>Computador</option>
         <option>Jogador</option>
+      </select> <br>
+      Selecione que vai iniciar o jogo: 
+      <select>
+        <option>Eu</option>
+        <option>Adversário</option>
       </select> <br>
       Escolha a sua dificuldade:
       <select>
@@ -64,36 +69,21 @@
         <option value>Normal</option>
         <option value>Difícil</option>
       </select> <br>
-      <div id=jogar onclick="IniciarJogo()">
+      <div id=jogar>
         Jogar
       </div>
     </div>
 
-  <div class=popup id=estado>
-    <h2>
-      Estado do jogo
-    </h2>
-    Número de sementes no armazem do Jogador 1: <br>
-    Número de sementes no armazem do Jogador 2:
-  </div>
-
-  <div id=tabuleiro>
-    <div class=cavidades id=armazem1> 
-      <div class=peca></div>
+    <div class=popup id=estado>
+      <h2>
+        Estado do jogo
+      </h2>
+      Número de sementes no armazem do Jogador 1: 0<br>
+      Número de sementes no armazem do Jogador 2: 0<br>
+     <input type=button id=desistir value=Desistir>
     </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades> </div>
-    <div class=cavidades id=armazem2> </div>
-    
-  </div>
-  </body>
 
+    <div id=tabuleiro> </div>
+  
+  </body>
 </html>
