--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">     
     <title>Mancala</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="source.js"></script>
   </head>
 
   <body>
@@ -88,7 +88,7 @@
 
     <div id=vitoria>Vitória!</div>
 
-    <div id=vitoria>Derrota!</div>
+    <div id=derrota>Derrota!</div>
   
   </body>
 </html>
