--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">     
     <title>Mancala</title>
-    <link rel="stylesheet" type='text/css' href="./css/style.css" />
+    <link rel="stylesheet" type='text/css' href="./style.css" />
     
   </head>
 
@@ -94,7 +94,8 @@
     <div id=derrota> 
       Derrota!
     </div>
-    <script src="./js/source.js" ></script>
+    <script src="./source.js" ></script>
+    <script src="./index.js" ></script>
     
   </body>
 </html>
