--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">     
     <title>Mancala</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
   </head>
 
   <body>
@@ -93,8 +93,7 @@
       Derrota!
     </div>
 
-    <script src="source.js"></script>
-    <script src="request.js"></script>
+    <script src="/source.js"></script>
 
   </body>
 </html>
